@@ -1,3 +1,7 @@
+2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
+
+	added PhotoService to the project
+
 2007-06-29  Scott Reeves <sreeves@novell.com> 
 
 	* src/TrayPopupWindow.cs: Add initial popup widow
